==> MXCHIP/mxos/platform/MCU/STM32F4xx/peripherals/platform_rtc.c <==
#include <time.h>
#include "mxos_board.h"
#include "platform_peripheral.h"
#include "mxos_debug.h"
#define MXOS_VERIFY_TIME(time, valid) \
if( (time->tm_sec > 60) || ( time->tm_min > 60 ) || (time->tm_hour > 24) || ( time->tm_mday > 31 ) || ( time->tm_mon > 12 )) \
  { \
    valid= false; \
  } \
else \
  { \
    valid= true; \
  }
#define LEAP_YEAR_OR_NOT(year)( ( year % 4 ) ? ( 0 ) : ( 1 ) )
#define LEAP_YEAR_DAY_COUNT         ( 366 )
#define NOT_LEAP_YEAR_DAY_COUNT     ( 365 )
#define NUM_SECONDS_IN_MINUTE       ( 60 )
#define NUM_SECONDS_IN_HOUR         ( 3600 )
#define NUM_1P25MS_IN_SEC           ( 800 )

OSStatus platform_rtc_init(void)
{
#ifdef MXOS_ENABLE_MCU_RTC
    RTC_InitTypeDef RTC_InitStruct;

#ifdef USE_RTC_BKP
  /* Enable the PWR clock */
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR, ENABLE);
  /* Allow access to BKP Domain */
  PWR_BackupAccessCmd(ENABLE);
  PWR_BackupRegulatorCmd(ENABLE);
#endif

  /* Enable the LSE OSC */
  RCC_LSEConfig(RCC_LSE_ON);
  /* Wait till LSE is ready */
  while(RCC_GetFlagStatus(RCC_FLAG_LSERDY) == RESET)
  {
  }
  /* Select the RTC Clock Source */
  RCC_RTCCLKConfig(RCC_RTCCLKSource_LSE);

  /* Enable the RTC Clock */
  RCC_RTCCLKCmd(ENABLE);

  /* RTC configuration -------------------------------------------------------*/
  /* Wait for RTC APB registers synchronisation */
  RTC_WaitForSynchro();
  
#ifdef USE_RTC_BKP
  if (RTC_ReadBackupRegister(RTC_BKP_DR0) != USE_RTC_BKP) {
    RTC_DeInit( );
    RTC_InitStruct.RTC_HourFormat = RTC_HourFormat_24;
    /* RTC ticks every second */
    RTC_InitStruct.RTC_AsynchPrediv = 0x7F;
    RTC_InitStruct.RTC_SynchPrediv = 0xFF;

    RTC_Init( &RTC_InitStruct );
    platform_rtc_set_time(0);
    RTC_WriteBackupRegister(RTC_BKP_DR0, USE_RTC_BKP);
  }
#else
  //#ifdef RTC_ENABLED
  /* application must have mxos_application_default_time structure declared somewhere, otherwise it wont compile */
  /* write default application time inside rtc */
  platform_rtc_set_time(&mxos_default_time);
  //#endif /* RTC_ENABLED */
#endif
  return kNoErr;
#else
  return kUnsupportedErr;
#endif
}

OSStatus platform_rtc_get_time( time_t *t )
{
#ifdef MXOS_ENABLE_MCU_RTC
    RTC_DateTypeDef dateStruct;
    RTC_TimeTypeDef timeStruct;

    struct tm timeinfo;
  
    if( t == 0 )   return kParamErr;
  
    /* save current rtc time */
    RTC_GetTime( RTC_Format_BIN, &timeStruct );
    RTC_GetDate( RTC_Format_BIN, &dateStruct );
  
  // Setup a tm structure based on the RTC
  /* tm_wday information is ignored by mktime */
  timeinfo.tm_mon  = dateStruct.RTC_Month - 1;
  timeinfo.tm_mday = dateStruct.RTC_Date;
  timeinfo.tm_year = dateStruct.RTC_Year + 68;
  timeinfo.tm_hour = timeStruct.RTC_Hours;
  timeinfo.tm_min  = timeStruct.RTC_Minutes;
  timeinfo.tm_sec  = timeStruct.RTC_Seconds;
  // Daylight Saving Time information is not available
  timeinfo.tm_isdst  = -1;
  
  // Convert to timestamp
  *t = mktime(&timeinfo);

  return kNoErr;
#else /* #ifdef MXOS_ENABLE_MCU_RTC */
  UNUSED_PARAMETER(time);
  return kUnsupportedErr;
#endif /* #ifdef MXOS_ENABLE_MCU_RTC */
}

OSStatus platform_rtc_set_time( time_t t )
{
#ifdef MXOS_ENABLE_MCU_RTC
  RTC_TimeTypeDef timeStruct;
  RTC_DateTypeDef dateStruct;
  bool    valid = false;

  // Convert the time into a tm
  struct tm *timeinfo = localtime(&t);
    
  MXOS_VERIFY_TIME(timeinfo, valid);
  if( valid == false )
  {
    return kParamErr;
  }

  // Fill RTC structures
  if (timeinfo->tm_wday == 0) {
      dateStruct.RTC_WeekDay    = 7;
  } else {
      dateStruct.RTC_WeekDay    = timeinfo->tm_wday;
  }
  dateStruct.RTC_Month          = timeinfo->tm_mon + 1;
  dateStruct.RTC_Date           = timeinfo->tm_mday;
  dateStruct.RTC_Year           = timeinfo->tm_year - 68;
  timeStruct.RTC_Hours          = timeinfo->tm_hour;
  timeStruct.RTC_Minutes        = timeinfo->tm_min;
  timeStruct.RTC_Seconds        = timeinfo->tm_sec;

  // Change the RTC current date/time
  RTC_SetTime( RTC_Format_BIN, &timeStruct );
  RTC_SetDate( RTC_Format_BIN, &dateStruct );

  return kNoErr;
#else /* #ifdef MXOS_ENABLE_MCU_RTC */
  UNUSED_PARAMETER(time);
  return kUnsupportedErr;
#endif /* #ifdef MXOS_ENABLE_MCU_RTC */
}
