==> MXCHIP/mxos/platform/mbed/peripherals/platform_rtc.c <==
#include "platform_peripheral.h"
#include "mxos_common.h"
#include "mxos_debug.h"
#include "rtc_api.h"
#define MXOS_VERIFY_TIME(time, valid) \
if( (time->sec > 60) || ( time->min > 60 ) || (time->hr > 24) || ( time->date > 31 ) || ( time->month > 12 )) \
  { \
    valid= false; \
  } \
else \
  { \
    valid= true; \
  }
#define LEAP_YEAR_OR_NOT(year)( ( year % 4 ) ? ( 0 ) : ( 1 ) )
#define LEAP_YEAR_DAY_COUNT         ( 366 )
#define NOT_LEAP_YEAR_DAY_COUNT     ( 365 )
#define NUM_SECONDS_IN_MINUTE       ( 60 )
#define NUM_SECONDS_IN_HOUR         ( 3600 )
#define NUM_1P25MS_IN_SEC           ( 800 )

merr_t platform_rtc_init(void)
{
#ifdef MXOS_ENABLE_MCU_RTC
    rtc_init();
    return kNoErr;
#else
    return kUnsupportedErr;
#endif
}

merr_t platform_rtc_get_time(  time_t *t )
{
#ifdef MXOS_ENABLE_MCU_RTC
  *t = rtc_read();
  return kNoErr;
#else /* #ifdef MXOS_ENABLE_MCU_RTC */
  UNUSED_PARAMETER(t);
  return kUnsupportedErr;
#endif /* #ifdef MXOS_ENABLE_MCU_RTC */
}

merr_t platform_rtc_set_time( time_t t )
{
#ifdef MXOS_ENABLE_MCU_RTC
  rtc_write(t);
  return kNoErr;
#else /* #ifdef MXOS_ENABLE_MCU_RTC */
  UNUSED_PARAMETER(time);
  return kUnsupportedErr;
#endif /* #ifdef MXOS_ENABLE_MCU_RTC */
}
